--- a/platformio.ini
+++ b/platformio.ini
@@ -20,8 +20,8 @@ default_envs = MightyCore
 platform = atmelavr
 framework = arduino
 lib_deps =
-    quicksander/ArduinoHttpServer @ 0.9.9
-    https://github.com/njh/EtherCard
+    quicksander/ArduinoHttpServer @ 0.10.0
+    jandrassy/EthernetENC @ 2.0.2
     bblanchon/ArduinoJson @ 6.19.3
 lib_ignore =
     Test
