ArduinoJSON updated to v6.19.4 Atmel platform fixed to v4.0.0

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,12 +17,12 @@ default_envs = MightyCore
 
 ; ENVIRONMENT SETTINGS
 [env:MightyCore]
-platform = atmelavr
+platform = atmelavr @ 4.0.0
 framework = arduino
 lib_deps =
     quicksander/ArduinoHttpServer @ 0.10.0
     jandrassy/EthernetENC @ 2.0.2
-    bblanchon/ArduinoJson @ 6.19.3
+    bblanchon/ArduinoJson @ 6.19.4
 lib_ignore =
     Test
 
