3rd party libraries updated.

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,12 +17,12 @@ default_envs = MightyCore
 
 ; ENVIRONMENT SETTINGS
 [env:MightyCore]
-platform = atmelavr @ 4.0.0
+platform = atmelavr @ ~5.0.0
 framework = arduino
 lib_deps =
-    quicksander/ArduinoHttpServer @ 0.10.0
-    jandrassy/EthernetENC @ 2.0.2
-    bblanchon/ArduinoJson @ 6.19.4
+    quicksander/ArduinoHttpServer @ ~0.10.1
+    jandrassy/EthernetENC @ ~2.0.4
+    bblanchon/ArduinoJson @ ~6.21.5
 lib_ignore =
     Test
 
